src/test/ui/parser/issue-17383.stderr
error: custom discriminant values are not allowed in enums with fields
  --> $DIR/issue-17383.rs:2:9
   |
LL |     A = 3,
   |         ^ invalid custom discriminant
LL |
LL |     B(usize)
   |     -------- variant with a field defined here

error: aborting due to previous error

