src/test/ui/parser/issue-17383.rs
enum X {
    A = 3,
    //~^ ERROR custom discriminant values are not allowed in enums with fields
    B(usize)
}

fn main() {}
